Added heroku setup files

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@iktos/rdkitjs": "~1.0.1",
     "express": "^4.17.1",
     "lodash": "^4.17.20"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
